@@ -16,63 +16,35 @@ import com.ibm.wsdl.util.xml.*;
 /**
  * @author Matthew J. Duftler (duftler@us.ibm.com)
  */
-public class HTTPUrlEncodedSerializer implements ExtensionSerializer,
-                                                 ExtensionDeserializer,
-                                                 Serializable
-{
+public class HTTPUrlEncodedSerializer implements ExtensionSerializer, ExtensionDeserializer, Serializable {
   public static final long serialVersionUID = 1;
 
-  public void marshall(Class parentType,
-                       QName elementType,
-                       ExtensibilityElement extension,
-                       PrintWriter pw,
-                       Definition def,
-                       ExtensionRegistry extReg)
-                         throws WSDLException
-  {
-    HTTPUrlEncoded httpUrlEncoded = (HTTPUrlEncoded)extension;
+  public void marshall(Class<?> parentType, QName elementType, ExtensibilityElement extension, PrintWriter pw, Definition def, ExtensionRegistry extReg) throws WSDLException {
+    HTTPUrlEncoded httpUrlEncoded = (HTTPUrlEncoded) extension;
 
-    if (httpUrlEncoded != null)
-    {
-      String tagName =
-        DOMUtils.getQualifiedValue(HTTPConstants.NS_URI_HTTP,
-                                   "urlEncoded",
-                                   def);
+    if (httpUrlEncoded != null) {
+      String tagName = DOMUtils.getQualifiedValue(HTTPConstants.NS_URI_HTTP, "urlEncoded", def);
 
       pw.print("        <" + tagName);
 
       Boolean required = httpUrlEncoded.getRequired();
 
-      if (required != null)
-      {
-        DOMUtils.printQualifiedAttribute(Constants.Q_ATTR_REQUIRED,
-                                         required.toString(),
-                                         def,
-                                         pw);
+      if (required != null) {
+        DOMUtils.printQualifiedAttribute(Constants.Q_ATTR_REQUIRED, required.toString(), def, pw);
       }
 
       pw.println("/>");
     }
   }
 
-  public ExtensibilityElement unmarshall(Class parentType,
-                                         QName elementType,
-                                         Element el,
-                                         Definition def,
-                                         ExtensionRegistry extReg)
-                                           throws WSDLException
-	{
-    HTTPUrlEncoded httpUrlEncoded =
-      (HTTPUrlEncoded)extReg.createExtension(parentType, elementType);
-    String requiredStr = DOMUtils.getAttributeNS(el,
-                                                 Constants.NS_URI_WSDL,
-                                                 Constants.ATTR_REQUIRED);
+  public ExtensibilityElement unmarshall(Class<?> parentType, QName elementType, Element el, Definition def, ExtensionRegistry extReg) throws WSDLException {
+    HTTPUrlEncoded httpUrlEncoded = (HTTPUrlEncoded) extReg.createExtension(parentType, elementType);
+    String requiredStr = DOMUtils.getAttributeNS(el, Constants.NS_URI_WSDL, Constants.ATTR_REQUIRED);
 
-    if (requiredStr != null)
-    {
-      httpUrlEncoded.setRequired(new Boolean(requiredStr));
+    if (requiredStr != null) {
+      httpUrlEncoded.setRequired(Boolean.valueOf(requiredStr));
     }
 
     return httpUrlEncoded;
-	}
+  }
 }
